call launch template

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -284,7 +284,7 @@
         if (event)
           event.preventDefault()
 
-        // launchTemplate()
+        launchTemplate()
       })
 
      document.getElementById('btn-show-modal').click()
