--- a/views/community.mustache
+++ b/views/community.mustache
@@ -225,7 +225,7 @@
       					 </ul>
       				</section>
 
-              <section id="container-templates" class="message-content">
+              <section id="container-templates" class="dashboard-list-box margin-top-0" style="width:100%">
                 <ul>
                   {{#templates}}
                   <li>
