--- a/views/template.mustache
+++ b/views/template.mustache
@@ -217,7 +217,12 @@
         url: url,
         type: 'POST',
         data: params,
-        success: function(response){
+        success: function(response, status, xhr){
+          if (response.confirmation != 'success'){
+            completion(response, null) // 'data' is the error object here.
+            return
+          }
+
           completion(null, response)
         },
         error: function(response){
