show profile username

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -167,7 +167,7 @@
                       <img src="{{{profile.image}}}=s96-c" alt="" />
                     </a>
                     <small>
-                      by <a class="text-blue" href="/profile/{{profile.slug}}">Dkwon</a>
+                      by <a class="text-blue" href="/profile/{{profile.slug}}">{{profile.username}}</a>
                       <span>·</span>
                       {{dateString}}
                     </small>
