updated head tag and copy for landing page

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <head>
   {{>head}}
+
+  <meta property="og:title" content="Vertex 360 | Powerful Website Builder. Easy, Fast, Professional." />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://www.vertex360.co" />
+	<meta property="og:image" content="https://lh3.googleusercontent.com/lWlOTl9m1jHLyx3A5ZkLJ9_LcC-BmC9tPusKYQdMVk_l6xsia2u1oi7nEVD9Prw475T6f9Sw0OrsxQfPyC0BI6Aa=s260-c" />
+	<meta property="og:image:width" content="260px" />
+	<meta property="og:image:height" content="260px" />
+	<meta property="og:description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
+
   <style>
     .template-tag {
       background: #f9f9f9;
@@ -98,20 +107,20 @@
 <div class="fs-container hidden-md hidden-lg"> <!-- Mobile View -->
   <img src="https://lh3.googleusercontent.com/ZrN5Nhga-8cd9ju47rv8l6lYlrF4Hu12R-rov72-0qIT1k1fGCl4Bn0KZRMt0An1PbkUiSHefxR_4oqvqL4nqOZB1Q=s1024" alt="Vertex 360">
   <div class="post-content">
-    <h3><a href="#">Lightning Fast Web Design</a></h3>
+    <h3><a href="#">Powerful Website Builder</a></h3>
     <ul class="post-meta">
       <li>No Coding Required</li>
       <li>FREE to start</li>
     </ul>
 
     <p class="margin-top-0 margin-bottom-40">
-      Get up and running with a gorgeous new website in under an hour.
+      Get up and running with a gorgeous new website in under an hour. Our easy website builder enables anyone to create beautiful, professional websites withouth endlessly tinkering with confusing tools, drag & drop interfaces or code. Vertex 360 was made for you - busy people who don't have all day to learn confusing features.
     </p>
 
     <hr class="margin-bottom-40" />
 
     <img style="width:80%;border:1px solid #ededed" src="https://lh3.googleusercontent.com/f25J1JMUTLjI-9GZvqTzyJEZmMbJYjiCIIq04V5cFoD7bnKcMi44fOVrZ50-vin0R25Iw21zPh6D_T8NeQtIxOAF=s1024" />
-    <h3 class="margin-top-40">Web Design Made Easy</h3>
+    <h3 class="margin-top-40">Lightning Fast Web Design</h3>
     <p class="margin-top-0 margin-bottom-40">
       Simply input your content and walk away - no coding required! No more tinkering with
       confusing editors, drag &amp; drop tools, or ridiculously complicated features for
@@ -122,21 +131,21 @@
     <hr class="margin-bottom-40" />
 
     <img style="width:80%" src="https://lh3.googleusercontent.com/IRk0higW6nSjtBG_8lzhNpU7Pi6yzguo1J7Thkwlj4biYpqB63uZ-IAfeQN9nJS1QiokjVnYrgVBYvkcdpDFKGk-rmU=s1024" />
-    <h3 class="margin-top-40">Powerful Features</h3>
+    <h3 class="margin-top-40">Full Features</h3>
     <p class="margin-top-0 margin-bottom-40">
-      Easily interact with your customers with email subscriber lists, image hosting and blog support.
-      <ul class="listing-features checkboxes margin-top-0 margin-bottom-20">
+      Easy doesn't mean limited. All Vertex 360 sites come equipped with features considered required in today's fast-paced tech world. Some templates come with more features than others but most automatically integrate the following:
+      <ul style="font-size:14px" class="listing-features checkboxes margin-top-0 margin-bottom-20">
         <li>CMS (blog, users, etc)</li>
-        <li><em><b>Automatic SSL</b></em></li>
-        <li>Accept Credit Cards</li>
+        <li>Automatic SSL</li>
+        <li><em><b>Accept Credit Cards</b></em></li>
         <li>Subscriber Forms</li>
         <li>Download Source Code</li>
-        <li><em><b>Custom Domains</b></em></li>
+        <li>Custom Domains</li>
         <li><em><b>Site Analytics</b></em></li>
         <li>Collaboration Option</li>
         <li>Email Support</li>
       </ul>
-      <em><b>Premium Feature</b></em>
+      <em><b>Bold = certain templates, not all templates</b></em>
     </p>
 
     <hr class="margin-bottom-40" />
@@ -146,53 +155,56 @@
     <p class="margin-top-0 margin-bottom-40">
       Vertex websites are free to start and come with a robust set of features
       out of the box. Once you are ready to connect your site to a custom domain,
-      our afforable plans begin at only $5 per month.
-      <table class="table table-striped" style="border:1px solid #ededed;background:#fffffa">
-        <thead>
-          <tr>
-            <td style="padding:12px">&nbsp;</td>
-            <td style="padding:12px"><b>Basic</b><br /><small>Free</small></td>
-            <td style="padding:12px"><b>Premium</b><br /><small>$5/month</small></td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Unlimited Test Sites</td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-          </tr>
-          <tr>
-            <td>CMS (for blog, subscribers, etc)</td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-          </tr>
-          <tr>
-            <td>Downloadable Code</td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-          </tr>
-          <tr>
-            <td>Custom Domain</td>
-            <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-          </tr>
-          <tr>
-            <td>Automatic SSL</td>
-            <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
-            <td><i class="verified-icon margin-left-10"></i></td>
-          </tr>
-        </tbody>
-      </table>
+      our afforable plans begin at only $10 per month.
     </p>
 
-    <img class="margin-top-40" style="border:1px solid #ededed" src="https://lh3.googleusercontent.com/oM_ki-DpaYHK6gkL7gRR0QOGpjP_z0naDT2gRRJb6cn9NCGu7uNGakjdzUScj1J9_kB8OLImvW4KPlbGpP8CWX-Pbg=s320" />
-    <h3 class="margin-top-20">Join our Slack Channel!</h3>
-    <p class="margin-top-0 margin-bottom-40">
-      Join our Slack channel to ask questions, stay up to date with new features, templates,
-      and learn more about Vetex 360!. To join, click <a style="color:red" target="_blank" href="https://join.slack.com/t/vertex360/shared_invite/enQtNTg4ODY2MzY3MTIyLTdlNzNjY2RmOGIyYjIxYzZkNmQ5ZDVhNWNhNWU0ZjJiY2U1Mjg2OWU4NjMzY2YwOGVlZjU2YjQ1MjMzNWI3NGM">HERE</a>.
-    </p>
+    <div class="row">
+        <div class="col-md-12">
+          <div class="pricing-container margin-top-10">
 
-    <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px;padding:16px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
+          <!-- Plan #1 -->
+            <div class="plan">
+              <div class="plan-price">
+                <h3 class="margin-bottom-0">Basic</h3>
+                <span class="value padding-top-10">Free</span>
+                <span class="period margin-top-10">Forever</span>
+              </div>
+
+              <div class="plan-features">
+                <ul>
+                  <li>One Site</li>
+                  <li>Automatic SSL</li>
+                  <li>Custom Domain</li>
+                  <li>Built-in CMS</li>
+                  <li>$5 per Additional Site</li>
+                </ul>
+                <a id="btn-join-basic" class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
+              </div>
+            </div>
+
+            <!-- Plan #3 -->
+            <div class="plan">
+              <div class="plan-price" style="background:red">
+                <h3 style="color:#fff" class="margin-bottom-0">Pro</h3>
+                <span style="color:#fff" class="value padding-top-10">$10</span>
+                <span style="color:#fff" class="period margin-top-10">Per Month</span>
+              </div>
+
+              <div class="plan-features">
+                <ul>
+                  <li>5 Sites</li>
+                  <li>Automatic SSL</li>
+                  <li>Custom Domain</li>
+                  <li>Built-in CMS</li>
+                  <li>$5 per Additional Site</li>
+                </ul>
+                <a class="button border" href="#">Get Started</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
   </div>
   {{>footer-dark}}
 </div>
@@ -230,45 +242,50 @@
   <div>
     <img src="https://lh3.googleusercontent.com/ZrN5Nhga-8cd9ju47rv8l6lYlrF4Hu12R-rov72-0qIT1k1fGCl4Bn0KZRMt0An1PbkUiSHefxR_4oqvqL4nqOZB1Q=s1024" alt="Vertex 360">
   	<div class="post-content">
-  		<h3><a href="#">Lightning Fast Web Design</a></h3>
+  		<h3><a href="#">Powerful Website Builder</a></h3>
   		<ul class="post-meta">
   			<li>No Coding Required</li>
         <li>FREE to start</li>
   		</ul>
 
       <p class="margin-top-0 margin-bottom-40">
-        Get up and running with a gorgeous new website in under an hour.
+        Get up and running with a gorgeous new website in under an hour. Our easy
+        website builder enables anyone to create beautiful, professional websites
+        withouth endlessly tinkering with confusing tools, drag &amp; drop interfaces
+        or code. Vertex 360 was made for you - busy people who don't have all day to
+        learn confusing features.
       </p>
 
       <hr class="margin-bottom-40" />
 
       <img style="width:80%;border:1px solid #ededed" src="https://lh3.googleusercontent.com/f25J1JMUTLjI-9GZvqTzyJEZmMbJYjiCIIq04V5cFoD7bnKcMi44fOVrZ50-vin0R25Iw21zPh6D_T8NeQtIxOAF=s1024" />
-      <h3 class="margin-top-40">Web Design Made Easy</h3>
+      <h3 class="margin-top-40">Lightning Fast Web Design</h3>
       <p class="margin-top-0 margin-bottom-40">
-        Simply input your content and walk away - no coding required! No more tinkering with
+        Simply input your content and walk away - no coding required! No more messing with
         confusing editors, drag &amp; drop tools, or ridiculously complicated features for
         <em>"beginners"</em>. On Vertex 360, simply input your text and images and move on
-        with your life, business, more important stuff.
+        with your life, business, family - more important stuff.
       </p>
 
       <hr class="margin-bottom-40" />
 
       <img style="width:80%" src="https://lh3.googleusercontent.com/IRk0higW6nSjtBG_8lzhNpU7Pi6yzguo1J7Thkwlj4biYpqB63uZ-IAfeQN9nJS1QiokjVnYrgVBYvkcdpDFKGk-rmU=s1024" />
-      <h3 class="margin-top-40">Powerful Features</h3>
+      <h3 class="margin-top-40">Full Features</h3>
       <p class="margin-top-0 margin-bottom-40">
-        Easily interact with your customers with email subscriber lists, image hosting and blog support.
-        <ul class="listing-features checkboxes margin-top-0 margin-bottom-20">
+        Easy doesn't mean limited. All Vertex 360 sites come equipped with features considered
+        required in today's fast-paced tech world. Some templates come with more features than
+        others but most automatically integrate the following:
+        <ul style="font-size:14px" class="listing-features checkboxes margin-top-0 margin-bottom-20">
   				<li>CMS (blog, users, etc)</li>
-  				<li><em><b>Automatic SSL</b></em></li>
+  				<li>Automatic SSL</li>
   				<li>Accept Credit Cards</li>
   				<li>Subscriber Forms</li>
   				<li>Download Source Code</li>
-          <li><em><b>Custom Domains</b></em></li>
-          <li><em><b>Site Analytics</b></em></li>
+          <li>Custom Domains</li>
+          <li>Site Analytics</li>
           <li>Collaboration Option</li>
           <li>Email Support</li>
   			</ul>
-        <em><b>Premium Feature</b></em>
       </p>
 
       <hr class="margin-bottom-40" />
@@ -278,56 +295,11 @@
       <p class="margin-top-0 margin-bottom-40">
         Vertex websites are free to start and come with a robust set of features
         out of the box. Once you are ready to connect your site to a custom domain,
-        our afforable plans begin at only $5 per month.
-        <table class="table table-striped" style="border:1px solid #ededed;background:#fffffa">
-          <thead>
-            <tr>
-              <td style="padding:12px">&nbsp;</td>
-              <td style="padding:12px"><b>Basic</b><br /><small>Free</small></td>
-              <td style="padding:12px"><b>Premium</b><br /><small>$5/month</small></td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Unlimited Test Sites</td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-            </tr>
-            <tr>
-              <td>CMS (for blog, subscribers, etc)</td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-            </tr>
-            <tr>
-              <td>Downloadable Code</td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-            </tr>
-            <tr>
-              <td>Custom Domain</td>
-              <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-            </tr>
-            <tr>
-              <td>Automatic SSL</td>
-              <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
-              <td><i class="verified-icon margin-left-10"></i></td>
-            </tr>
-          </tbody>
-        </table>
+        our afforable plans begin at only $10 per month.
       </p>
-
-      <img class="margin-top-40" style="border:1px solid #ededed" src="https://lh3.googleusercontent.com/oM_ki-DpaYHK6gkL7gRR0QOGpjP_z0naDT2gRRJb6cn9NCGu7uNGakjdzUScj1J9_kB8OLImvW4KPlbGpP8CWX-Pbg=s320" />
-      <h3 class="margin-top-20">Join our Slack Channel!</h3>
-      <p class="margin-top-0 margin-bottom-40">
-        Join our Slack channel to ask questions, stay up to date with new features, templates,
-        and learn more about Vetex 360!. To join, click <a style="color:red" target="_blank" href="https://join.slack.com/t/vertex360/shared_invite/enQtNTg4ODY2MzY3MTIyLTdlNzNjY2RmOGIyYjIxYzZkNmQ5ZDVhNWNhNWU0ZjJiY2U1Mjg2OWU4NjMzY2YwOGVlZjU2YjQ1MjMzNWI3NGM">HERE</a>.
-      </p>
-
       <div class="row">
-
       		<div class="col-md-12">
-      			<div class="pricing-container margin-top-30">
+      			<div class="pricing-container margin-top-10">
 
       			<!-- Plan #1 -->
       				<div class="plan">
@@ -342,6 +314,7 @@
       							<li>One Site</li>
                     <li>Automatic SSL</li>
       							<li>Custom Domain</li>
+                    <li>Built-in CMS</li>
       							<li>$5 per Additional Site</li>
       						</ul>
       						<a id="btn-join-basic" class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
@@ -361,6 +334,7 @@
       							<li>5 Sites</li>
       							<li>Automatic SSL</li>
                     <li>Custom Domain</li>
+                    <li>Built-in CMS</li>
                     <li>$5 per Additional Site</li>
       						</ul>
       						<a class="button border" href="#">Get Started</a>
@@ -371,9 +345,6 @@
       		</div>
       	</div>
 
-      <%#showGetStarted%>
-      <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px;padding:16px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
-      <%/showGetStarted%>
   	</div>
   </div>
 </script>
