--- a/views/index.mustache
+++ b/views/index.mustache
@@ -114,7 +114,7 @@
     </ul>
 
     <p class="margin-top-0 margin-bottom-40">
-      Get up and running with a gorgeous new website in under an hour. Our easy website builder enables anyone to create beautiful, professional websites withouth endlessly tinkering with confusing tools, drag & drop interfaces or code. Vertex 360 was made for you - busy people who don't have all day to learn confusing features.
+      Get up and running with a gorgeous new website in under an hour. Our easy website builder enables anyone to create beautiful, professional websites without endlessly tinkering with confusing tools, drag & drop interfaces or code. Vertex 360 was made for you - busy people who don't have all day to learn confusing features.
     </p>
 
     <hr class="margin-bottom-40" />
@@ -251,7 +251,7 @@
       <p class="margin-top-0 margin-bottom-40">
         Get up and running with a gorgeous new website in under an hour. Our easy
         website builder enables anyone to create beautiful, professional websites
-        withouth endlessly tinkering with confusing tools, drag &amp; drop interfaces
+        without endlessly tinkering with confusing tools, drag &amp; drop interfaces
         or code. Vertex 360 was made for you - busy people who don't have all day to
         learn confusing features.
       </p>
