--- a/views/index.mustache
+++ b/views/index.mustache
@@ -122,10 +122,10 @@
     <img style="width:80%;border:1px solid #ededed" src="https://lh3.googleusercontent.com/f25J1JMUTLjI-9GZvqTzyJEZmMbJYjiCIIq04V5cFoD7bnKcMi44fOVrZ50-vin0R25Iw21zPh6D_T8NeQtIxOAF=s1024" />
     <h3 class="margin-top-40">Lightning Fast Web Design</h3>
     <p class="margin-top-0 margin-bottom-40">
-      Simply input your content and walk away - no coding required! No more tinkering with
+      Simply input your content and walk away - no coding required! No more messing with
       confusing editors, drag &amp; drop tools, or ridiculously complicated features for
       <em>"beginners"</em>. On Vertex 360, simply input your text and images and move on
-      with your life, business, more important stuff.
+      with your life, business, family - the important stuff.
     </p>
 
     <hr class="margin-bottom-40" />
