--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -90,6 +90,10 @@
       padding: 8px !important;
       border-radius: 4px !important;
     }
+
+    .comment-text a {
+      color: red
+    }
   </style>
 </head>
 
@@ -133,7 +137,7 @@
                     <img style="width:44px;height:44px" src="{{{comment.profile.image}}}=s96-c" alt="" />
                   </div>
   								<div class="message-text margin-left-60">
-                    <p>{{comment.text}}</p>
+                    <p class="comment-text">{{{comment.text}}}</p>
                     <hr />
                     <div style="text-align:right">
                       <small>submitted by
@@ -171,7 +175,7 @@
                       <span>·</span>
                       {{dateString}}
                     </small>
-                    <p class="margin-top-10">{{text}}</p>
+                    <p class="margin-top-10 comment-text">{{{text}}}</p>
                   </div>
                   {{/replies}}
                 </div>
@@ -267,7 +271,7 @@
       <span>·</span>
       <% dateString %>
     </small>
-    <p class="margin-top-10"><% text %></p>
+    <p class="margin-top-10 comment-text"><%{text}%></p>
   </div>
 </script>
 
