--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -347,6 +347,9 @@
 
           $('#container-replies').html(repliesHtml)
           $('#input-reply-text').val('')
+          $("html, body").animate({
+            scrollTop: $(document).height()
+          }, 1000)
 
           // update original comment with numRelies
           setTimeout(function(){
