--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/css/style.min.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <link rel="icon" href="https://lh3.googleusercontent.com/iGeI_uAeybirO0eIxs1x0xybUSFPRVa8lEluDtl5_0q_z-Xwy4GWLLn3sX9MhNJg3MZFGr3fsmqcMNvnE5XZL737ppM=s32-c" type="image/png" />
+
   <style>
     input {
       box-shadow: none !important;
