--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -182,7 +182,7 @@
       									<h3><a href="/template/{{slug}}">{{name}}</a></h3>
       									<span style="text-transform:capitalize">{{template.category}}</span>
                         <div class="margin-top-20">
-                          <a href="/template/{{slug}}" class="button margin-right-10"><i class="sl sl-icon-magnifier-add"></i> View More</a>
+                          <a href="/template/{{slug}}" class="button margin-right-10"><i class="sl sl-icon-magnifier-add"></i> View Details</a>
             							<a target="_blank" href="https://{{slug}}.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i> Example</a>
                         </div>
       								</div>
@@ -283,7 +283,7 @@
             <h3><a href="/template/<%slug%>"><%name%></a></h3>
             <span style="text-transform:capitalize"><%template.category%></span>
             <div class="margin-top-20">
-              <a href="/template/<%slug%>" class="button margin-right-10"><i class="sl sl-icon-magnifier-add"></i> View More</a>
+              <a href="/template/<%slug%>" class="button margin-right-10"><i class="sl sl-icon-magnifier-add"></i> View Details</a>
               <a target="_blank" href="https://<%slug%>.vertex360.co" class="button"><i class="sl sl-icon-share-alt"></i> Example</a>
             </div>
           </div>
