import stripe module

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -379,11 +379,10 @@
 </script>
 
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+<script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/home.min.js"></script>
-{{#cdn}}
-{{>analytics}}
-{{/cdn}}
+{{#cdn}}{{>analytics}}{{/cdn}}
 
 </body>
 </html>
