connect premium modal button

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -101,6 +101,7 @@
 	<div id="selected-template-container" class="fs-inner-container map-fixed" style="overflow:scroll">
     <div id="selected-template" class="blog-post" style="margin-top:0px"></div>
     <a style="display:none" id="btn-show-modal" href="#sign-in-dialog" class="popup-with-zoom-anim">test</a>
+    <a style="display:none" id="btn-show-premium-modal" href="#premium-dialog" class="popup-with-zoom-anim">test</a>
 	</div>
 </div>
 
@@ -337,7 +338,7 @@
                     <li>Built-in CMS</li>
                     <li>$5 per Additional Site</li>
       						</ul>
-      						<a class="button border" href="#">Get Started</a>
+      						<a id="btn-join-premium" class="button border popup-with-zoom-anim" href="#premium-dialog">Get Started</a>
       					</div>
       				</div>
 
