premium modal container

--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -61,3 +61,28 @@
     </div>
   </div>
 </div>
+
+
+<div id="premium-dialog" class="zoom-anim-dialog mfp-hide" style="background:#fffffa">
+  <div class="small-dialog-header">
+    <img style="max-width:180px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s360" />
+  </div>
+
+  <form method="post" class="login">
+    <div class="input-row">
+      <div class="input-label">Email</div>
+      <div class="input-container">
+        <input id="input-login-email" type="text" />
+      </div>
+    </div>
+
+    <div class="input-row">
+      <div class="input-label">Password</div>
+      <div class="input-container">
+        <input id="input-login-password" type="text" />
+      </div>
+    </div>
+
+    <input id="input-login" style="width:100%" type="submit" class="button border fw margin-top-10 width-100" name="login" value="Log In" />
+  </form>
+</div>
