update input ids

--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -16,14 +16,14 @@
           <div class="input-row">
             <div class="input-label">Email</div>
             <div class="input-container">
-              <input id="input-login-email" type="text" />
+              <input id="input-premium-email" type="text" />
             </div>
           </div>
 
           <div class="input-row">
             <div class="input-label">Password</div>
             <div class="input-container">
-              <input id="input-login-password" type="text" />
+              <input id="input-premium-password" type="text" />
             </div>
           </div>
 
