--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -23,7 +23,7 @@
           <div class="input-row">
             <div class="input-label">Password</div>
             <div class="input-container">
-              <input id="input-login-password" type="text" />
+              <input id="input-login-password" type="password" />
             </div>
           </div>
 
